--- a/index.html
+++ b/index.html
@@ -6,22 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    .hidden {
-      display: none;
-    }
+    .hidden { display: none; }
     .loading-screen {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: #0f0c29;
-      background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
+      background: linear-gradient(45deg, #ff0099, #493240, #1CB5E0, #000046);
+      background-size: 600% 600%;
+      animation: gradient-animation 10s ease infinite;
       color: white;
       display: flex;
       align-items: center;
       justify-content: center;
       z-index: 9999;
+    }
+    @keyframes gradient-animation {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+    .nav-button {
+      width: 20%;
+      text-align: center;
     }
   </style>
 </head>
@@ -35,54 +43,46 @@
 
   <h1 class="text-3xl font-bold mb-6">CosmicCoin Mining Airdrop</h1>
 
-  <div id="mainSection" class="hidden">
-    <h2 class="text-2xl mb-4">Welcome to the CosmicCoin Airdrop</h2>
-    <button class="button bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" onclick="startMining(24)">Start 24-Hour Mining</button>
-    <button class="button bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" onclick="startMining(12)">Start 12-Hour Mining</button>
-  </div>
-
-  <div id="miningSection" class="hidden">
-    <h2 class="text-2xl mb-4">Mining CosmicCoin</h2>
-    <p id="miningStatus" class="text-lg mb-4">Mining in progress...</p>
-    <p id="miningAmount" class="text-lg mb-4"></p>
-    <button class="button bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full" onclick="stopMining()">Stop Mining</button>
+  <div id="mainSection">
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mb-4" onclick="startMining(24)">Start 24-Hour Mining</button>
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mb-4" onclick="startMining(12)">Start 12-Hour Mining</button>
+    <div id="miningStatus" class="text-lg mb-4"></div>
+    <div id="miningAmount" class="text-lg mb-4"></div>
   </div>
 
   <div id="tasksSection" class="hidden">
     <h2 class="text-2xl mb-4">Complete Tasks to Boost Mining Rate</h2>
     <ul class="list-disc list-inside">
-      <li><a href="https://x.com/Miracleharbor?t=dqzzaDkR4c-ZDb55Msit8g&s=09" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_ceo_x')">Follow CEO on X</button></a></li>
-      <li><a href="https://x.com/MirakleGroup?t=dqzzaDkR4c-ZDb55Msit8g&s=09" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_group_x')">Follow Mirakle Group on X</button></a></li>
-      <li><a href="https://www.instagram.com/miracleharbor?igsh=MTRkcnF4ajV6cDl0Zw==" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_ceo_ig')">Follow CEO on Instagram</button></a></li>
-      <li><a href="https://www.tiktok.com/@miraklegroup?_t=8lMgf55i0IP&_r=1" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_group_tiktok')">Follow Mirakle Group on TikTok</button></a></li>
-      <li><a href="https://www.facebook.com/profile.php?id=61557787735701" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_ceo_fb')">Follow CEO on Facebook</button></a></li>
-      <li><a href="https://www.instagram.com/mirakleai?igsh=MXB2bjFobmdxcXBkOA==" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_ai_ig')">Follow Mirakle AI on Instagram</button></a></li>
-      <li><a href="https://www.instagram.com/mirakle.group?igsh=Yjg4cXhuc3VlbTRn" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_group_ig')">Follow Mirakle Group on Instagram</button></a></li>
-      <li><a href="https://youtube.com/@MirakleGroup?si=L_kk9-UNUVZDCurY" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('subscribe_youtube')">Subscribe to YouTube Channel</button></a></li>
-      <li><a href="https://www.instagram.com/prime.blog14u?igsh=MTg1Z3V4bng0Z3BlNw==" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_cpo_ig')">Follow CPO on Instagram</button></a></li>
-      <li><a href="https://x.com/tosinsodiya1?t=dqzzaDkR4c-ZDb55Msit8g&s=09" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_cpo_x')">Follow CPO on X</button></a></li>
-      <li><a href="https://www.instagram.com/idiya_18?igsh=MWRzNjJzbm9jbDYydg==" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_cao_ig')">Follow CAO on Instagram</button></a></li>
-      <li><a href="https://x.com/Vickydiya1?t=dqzzaDkR4c-ZDb55Msit8g&s=09" target="_blank"><button class="button bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_cao_x')">Follow CAO on X</button></a></li>
+      <li><a href="https://x.com/Miracleharbor?t=dqzzaDkR4c-ZDb55Msit8g&s=09" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_ceo_x')">Follow CEO on X</button></a></li>
+      <li><a href="https://x.com/MirakleGroup?t=dqzzaDkR4c-ZDb55Msit8g&s=09" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_group_x')">Follow Mirakle Group on X</button></a></li>
+      <li><a href="https://www.instagram.com/miracleharbor?igsh=MTRkcnF4ajV6cDl0Zw==" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_ceo_ig')">Follow CEO on Instagram</button></a></li>
+      <li><a href="https://www.tiktok.com/@miraklegroup?_t=8lMgf55i0IP&_r=1" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_group_tiktok')">Follow Mirakle Group on TikTok</button></a></li>
+      <li><a href="https://www.facebook.com/profile.php?id=61557787735701" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_ceo_fb')">Follow CEO on Facebook</button></a></li>
+      <li><a href="https://www.instagram.com/mirakleai?igsh=MXB2bjFobmdxcXBkOA==" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_ai_ig')">Follow Mirakle AI on Instagram</button></a></li>
+      <li><a href="https://www.instagram.com/mirakle.group?igsh=Yjg4cXhuc3VlbTRn" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_group_ig')">Follow Mirakle Group on Instagram</button></a></li>
+      <li><a href="https://youtube.com/@MirakleGroup?si=L_kk9-UNUVZDCurY" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('subscribe_youtube')">Subscribe to YouTube Channel</button></a></li>
+      <li><a href="https://www.instagram.com/prime.blog14u?igsh=MTg1Z3V4bng0Z3BlNw==" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_cpo_ig')">Follow CPO on Instagram</button></a></li>
+      <li><a href="https://x.com/tosinsodiya1?t=dqzzaDkR4c-ZDb55Msit8g&s=09" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_cpo_x')">Follow CPO on X</button></a></li>
+      <li><a href="https://www.instagram.com/idiya_18?igsh=MWRzNjJzbm9jbDYydg==" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_cao_ig')">Follow CAO on Instagram</button></a></li>
+      <li><a href="https://x.com/Vickydiya1?t=dqzzaDkR4c-ZDb55Msit8g&s=09" target="_blank"><button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full mb-2" onclick="completeTask('follow_cao_x')">Follow CAO on X</button></a></li>
     </ul>
   </div>
 
   <div id="rewardsSection" class="hidden">
     <h2 class="text-2xl mb-4">Daily Rewards</h2>
-    <button class="button bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded-full" onclick="claimDailyReward()">Claim Daily Reward</button>
+    <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded-full" onclick="claimDailyReward()">Claim Daily Reward</button>
   </div>
 
   <div id="referralSection" class="hidden">
     <h2 class="text-2xl mb-4">Referral Program</h2>
     <p>Invite friends to earn more CosmicCoin!</p>
-    <input type="text" id="inviteLink" class="text-black w-full mb-4 p-2 rounded" readonly>
-    <button class="button bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-full" onclick="generateInviteLink()">Generate Invite Link</button>
-    <button class="button bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-full" onclick="inviteFriend()">Invite a Friend</button>
-    <p id="inviteStatus" class="mt-2"></p>
+    <button class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-full" onclick="inviteFriend()">Invite a Friend</button>
+    <p id="inviteStatus" class="mt-2">Share Wapchat app to invite users.</p>
   </div>
 
   <div id="notificationsSection" class="hidden">
     <h2 class="text-2xl mb-4">Enable Notifications</h2>
-    <button class="button bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" onclick="enableNotifications()">Enable Notifications</button>
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" onclick="enableNotifications()">Enable Notifications</button>
   </div>
 
   <div id="comingSoonSection" class="hidden">
@@ -90,123 +90,96 @@
     <p>Stay tuned for the ability to connect your wallet.</p>
   </div>
 
-  <script>
-    const user = {
-      id: Math.random().toString(36).substring(2), // Unique user ID
-      balance: 0,
-      miningRate: 5, // CosmicCoin per hour
-      miningEndTime: null,
-      tasksCompleted: {},
-      dailyRewardClaimed: false,
-      referrals: 0,
-      referralLinks: [],
-    };
+  <div class="fixed bottom-0 w-full flex justify-around bg-gray-800 p-4">
+    <button class="nav-button text-lg" onclick="showSection('mainSection')">Mine</button>
+    <button class="nav-button text-lg" onclick="showSection('tasksSection')">Tasks</button>
+    <button class="nav-button text-lg" onclick="showSection('rewardsSection')">Rewards</button>
+    <button class="nav-button text-lg" onclick="showSection('referralSection')">Referral</button>
+    <button class="nav-button text-lg" onclick="showSection('notificationsSection')">Notifications</button>
+    <button class="nav-button text-lg" onclick="showSection('comingSoonSection')">Wallet</button>
+  </div>
 
-    const taskRewards = {
-      follow_ceo_x: 10,
-      follow_group_x: 10,
-      follow_ceo_ig: 10,
-      follow_group_tiktok: 10,
-      follow_ceo_fb: 10,
-      follow_ai_ig: 10,
-      follow_group_ig: 10,
-      subscribe_youtube: 10,
-      follow_cpo_ig: 10,
-      follow_cpo_x: 10,
-      follow_cao_ig: 10,
-      follow_cao_x: 10,
-    };
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      setTimeout(function() {
+        document.getElementById('loadingScreen').style.display = 'none';
+      }, 2000);
+      loadBalance();
+      loadMiningStatus();
+    });
 
     function startMining(hours) {
-      user.miningEndTime = new Date().getTime() + hours * 60 * 60 * 1000;
-      document.getElementById('mainSection').classList.add('hidden');
-      document.getElementById('miningSection').classList.remove('hidden');
+      const endTime = new Date().getTime() + hours * 60 * 60 * 1000;
+      localStorage.setItem('miningEndTime', endTime);
+      localStorage.setItem('isMining', 'true');
       updateMiningStatus();
     }
 
     function updateMiningStatus() {
-      const now = new Date().getTime();
-      if (now < user.miningEndTime) {
-        const timeLeft = user.miningEndTime - now;
-        const hoursLeft = Math.floor(timeLeft / (1000 * 60 * 60));
-        const minutesLeft = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
-        const secondsLeft = Math.floor((timeLeft % (1000 * 60)) / 1000);
-        document.getElementById('miningStatus').innerText = `Mining in progress... Time left: ${hoursLeft}h ${minutesLeft}m ${secondsLeft}s`;
-        const minedAmount = ((new Date().getTime() - (user.miningEndTime - hours * 60 * 60 * 1000)) / (1000 * 60 * 60)) * user.miningRate;
-        document.getElementById('miningAmount').innerText = `CosmicCoin mined so far: ${minedAmount.toFixed(2)}`;
+      const miningEndTime = localStorage.getItem('miningEndTime');
+      const currentTime = new Date().getTime();
+
+      if (currentTime < miningEndTime) {
+        const timeLeft = (miningEndTime - currentTime) / 1000;
+        const hours = Math.floor(timeLeft / 3600);
+        const minutes = Math.floor((timeLeft % 3600) / 60);
+        const seconds = Math.floor(timeLeft % 60);
+
+        document.getElementById('miningStatus').innerText = `Mining in progress: ${hours}h ${minutes}m ${seconds}s left`;
         setTimeout(updateMiningStatus, 1000);
       } else {
-        user.balance += user.miningRate * hours;
-        document.getElementById('miningStatus').innerText = `Mining completed. Current balance: ${user.balance} CosmicCoin.`;
+        document.getElementById('miningStatus').innerText = 'Mining complete!';
+        const currentBalance = parseFloat(localStorage.getItem('balance')) || 0;
+        localStorage.setItem('balance', currentBalance + 10); // Adjust the reward as necessary
+        localStorage.setItem('isMining', 'false');
+        updateBalanceDisplay();
       }
     }
 
-    function stopMining() {
-      document.getElementById('miningSection').classList.add('hidden');
-      document.getElementById('mainSection').classList.remove('hidden');
-      notifyUser('Mining session stopped.');
+    function updateBalanceDisplay() {
+      const balance = localStorage.getItem('balance') || '0';
+      document.getElementById('miningAmount').innerText = `Current Balance: ${balance} CosmicCoin`;
     }
 
-    function completeTask(task) {
-      if (!user.tasksCompleted[task]) {
-        user.tasksCompleted[task] = true;
-        user.balance += taskRewards[task]; // Add task reward to the user's balance
-        user.miningRate += 1; // Increase mining rate by 1 for each completed task
-        alert('Task completed! Your mining rate has increased and you earned ' + taskRewards[task] + ' CosmicCoin. Current balance: ' + user.balance + ' CosmicCoin.');
+    function loadBalance() {
+      const balance = localStorage.getItem('balance') || '0';
+      document.getElementById('miningAmount').innerText = `Current Balance: ${balance} CosmicCoin`;
+    }
+
+    function loadMiningStatus() {
+      const isMining = localStorage.getItem('isMining') === 'true';
+      if (isMining) {
+        updateMiningStatus();
       } else {
-        alert('Task already completed.');
+        document.getElementById('miningStatus').innerText = 'No mining in progress';
       }
+    }
+
+    function showSection(sectionId) {
+      const sections = ['mainSection', 'tasksSection', 'rewardsSection', 'referralSection', 'notificationsSection', 'comingSoonSection'];
+      sections.forEach(id => document.getElementById(id).classList.add('hidden'));
+      document.getElementById(sectionId).classList.remove('hidden');
+    }
+
+    function completeTask(taskId) {
+      // Add logic for completing tasks and boosting mining rate
+      alert(`Task ${taskId} completed!`);
     }
 
     function claimDailyReward() {
-      if (!user.dailyRewardClaimed) {
-        user.balance += 10; // Add daily reward to the user's balance
-        user.dailyRewardClaimed = true;
-        alert('Daily reward claimed! Current balance: ' + user.balance + ' CosmicCoin.');
-      } else {
-        alert('Daily reward already claimed.');
-      }
-    }
-
-    function generateInviteLink() {
-      const inviteLink = `https://wapchat.com/airdrop?ref=${user.id}`;
-      user.referralLinks.push(inviteLink);
-      document.getElementById('inviteLink').value = inviteLink;
-      document.getElementById('inviteStatus').innerText = `Invite your friends using the link above.`;
+      // Add logic for claiming daily rewards
+      alert('Daily reward claimed!');
     }
 
     function inviteFriend() {
-      user.referrals += 1;
-      alert('Friend invited! You have ' + user.referrals + ' referrals.');
-      // Implement referral logic here
+      // Add logic for inviting friends
+      alert('Invite sent!');
     }
 
     function enableNotifications() {
-      alert('Notifications enabled.');
-      // Implement notification logic here
+      // Add logic for enabling notifications
+      alert('Notifications enabled!');
     }
-
-    function notifyUser(message) {
-      if (Notification.permission === 'granted') {
-        new Notification(message);
-      }
-    }
-
-    // Request notification permission on page load
-    document.addEventListener('DOMContentLoaded', () => {
-      if (Notification.permission !== 'granted') {
-        Notification.requestPermission();
-      }
-      document.getElementById('mainSection').classList.remove('hidden');
-      document.getElementById('tasksSection').classList.remove('hidden');
-      document.getElementById('rewardsSection').classList.remove('hidden');
-      document.getElementById('referralSection').classList.remove('hidden');
-      document.getElementById('comingSoonSection').classList.remove('hidden');
-      document.getElementById('notificationsSection').classList.remove('hidden');
-      setTimeout(() => {
-        document.getElementById('loadingScreen').classList.add('hidden');
-      }, 2000);
-    });
   </script>
 </body>
 </html>
