--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <h1 class="text-3xl font-bold mb-6">CosmicCoin Mining Airdrop</h1>
+  <h1 class="text-3xl font-bold mb-6">CosmicCoin Galaxy Airdrop</h1>
 
   <div id="mainSection">
     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mb-4" onclick="startMining(24)">Start 24-Hour Mining</button>
@@ -108,7 +108,7 @@
     <button class="nav-button text-lg" onclick="showSection('tasksSection')">Tasks</button>
     <button class="nav-button text-lg" onclick="showSection('rewardsSection')">Rewards</button>
     <button class="nav-button text-lg" onclick="showSection('referralSection')">Referral</button>
-    <button class="nav-button text-lg" onclick="showSection('notificationsSection')">Notifications</button>
+    <button class="nav-button text-lg" onclick="showSection('notificationsSection')">Alert</button>
     <button class="nav-button text-lg" onclick="showSection('comingSoonSection')">Wallet</button>
   </div>
 
@@ -152,7 +152,7 @@
     }
 
     function updateMiningAmount(secondsLeft) {
-      const ratePerSecond = 0.0001; // Adjust mining rate per second
+      const ratePerSecond = 0.0002; // Adjust mining rate per second
       const currentBalance = parseFloat(localStorage.getItem('balance')) || 0;
       const miningAmount = currentBalance + (ratePerSecond * (60 * 60 * 24 - secondsLeft)); // Total mined amount
       document.getElementById('miningAmount').innerText = `Current Balance: ${miningAmount.toFixed(4)} CosmicCoin`;
@@ -187,7 +187,7 @@
       alert(`Task ${taskId} completed!`);
       // Add logic for completing tasks and boosting mining rate
       const currentBalance = parseFloat(localStorage.getItem('balance')) || 0;
-      localStorage.setItem('balance', currentBalance + 1); // Reward for task completion
+      localStorage.setItem('balance', currentBalance + 100); // Reward for task completion
       updateBalanceDisplay();
     }
 
@@ -195,7 +195,7 @@
       alert('Daily reward claimed!');
       // Add logic for claiming daily rewards
       const currentBalance = parseFloat(localStorage.getItem('balance')) || 0;
-      localStorage.setItem('balance', currentBalance + 5); // Daily reward amount
+      localStorage.setItem('balance', currentBalance + 15); // Daily reward amount
       updateBalanceDisplay();
     }
 
@@ -203,7 +203,7 @@
       alert('Invite sent!');
       // Add logic for inviting friends
       const currentBalance = parseFloat(localStorage.getItem('balance')) || 0;
-      localStorage.setItem('balance', currentBalance + 2); // Reward for inviting friend
+      localStorage.setItem('balance', currentBalance + 20); // Reward for inviting friend
       updateBalanceDisplay();
     }
 
