--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>CosmicCoin Mining Airdrop</title>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ES3NKKYCS7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ES3NKKYCS7');
+</script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
