--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   gtag('config', 'G-ES3NKKYCS7');
 </script>
+
+  <script type='text/javascript' src='//pl23643603.highrevenuenetwork.com/f4/bd/f7/f4bdf7184e9b5e4b7332b6d98328857e.js'></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
