--- a/index.html
+++ b/index.html
@@ -126,10 +126,17 @@
     </ul>
   </div>
 
-  <div id="rewardsSection" class="hidden">
-    <h2 class="text-2xl mb-4">Daily Rewards</h2>
-    <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded-full" onclick="claimDailyReward()">Claim Daily Reward</button>
-  </div>
+    <div class="mt-8">
+    <h2 class="text-2xl font-bold">Rewards</h2>
+    <div id="dailyRewards">
+      <button class="task-button" id="day1">Day 1: 100 CosmicCoin</button>
+      <button class="task-button" id="day2">Day 2: 200 CosmicCoin</button>
+      <button class="task-button" id="day3">Day 3: 300 CosmicCoin</button>
+      <button class="task-button" id="day4">Day 4: 400 CosmicCoin</button>
+      <button class="task-button" id="day5">Day 5: 500 CosmicCoin</button>
+      <button class="task-button" id="day6">Day 6: 600 CosmicCoin</button>
+      <button class="task-button" id="day7">Day 7: 700 CosmicCoin</button>
+    </div>
 
   <div id="referralSection" class="hidden">
     <h2 class="text-2xl mb-4">Referral Program</h2>
